# WebProject

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
features/: create_a_playlist.feature  delete_playlist.feature  delete_song.feature  edit_playlist.feature  environment.py  list_playlists.feature  logout.fe.feature  logout.feature  regist_playlist.feature  regist_song.feature  search_playlist.feature  view_playlist.feature  view_song.feature
features/steps/: authentication.py  delete_playlist.py  delete_song.py  list_playlists.py  logout.py  register_playlist.py  register_song.py  search_playlist.py  view_playlist.py  view_song.py
project/: settings.py  urls.py
static/css/: styles.css
static/javascript/: searchFiveSongs.js  searchPlaylists.js
templates/: 403.html  add_song.html  base.html  create_playlist.html  form.html  home.html  playlist_confirm_delete.html  playlist_detail.html  song_detail.html
templates/registration/: login.html  signup.html
web/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
web/management/commands/: load_genres.py
web/migrations/: 0001_initial.py  0002_auto_20240318_1015.py  0002_remove_artist_songs_remove_genre_artists_and_more.py
