[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["joelblanc <joelblanciniesta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django="^5.0.2"
spotipy = "^2.23.0"
behave = "==1.2.*"
splinter = "==0.*"
behave-django = "==1.4.*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
